Add BS1000 defconfig and dts

--- a/arch/arm64/boot/dts/baikal/Makefile
+++ b/arch/arm64/boot/dts/baikal/Makefile
@@ -15,3 +15,4 @@ dtb-$(CONFIG_ARCH_BAIKAL) += bm-et101-v2-dp.dtb
 dtb-$(CONFIG_ARCH_BAIKAL) += bm-et101-v2-lvds.dtb
 dtb-$(CONFIG_ARCH_BAIKAL) += bm-et111.dtb
 dtb-$(CONFIG_ARCH_BAIKAL) += bm-em407.dtb
+dtb-$(CONFIG_ARCH_BAIKAL) += bs-et113.dtb
